Add auth pages (register working)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,13 @@
     <string name="contact">Contacto</string>
     <string name="drawer_open">Abrir drawer</string>
     <string name="drawer_close">Cerrar drawer</string>
+    <string name="email_hint">Correo electrónico</string>
+    <string name="password_hint">Contraseña</string>
+    <string name="signin">Registro</string>
+    <string name="login">Inicio sesión</string>
+    <string name="register">Registrarme</string>
+    <string name="log">Iniciar sesión</string>
+    <string name="username_hint">Nombre</string>
+    <string name="repeat_password_hint">Repite la contraseña</string>
+    <string name="error">Error</string>
 </resources>
