Implement dagger hilt and finished login/register screens
Falta la funcionalidad del botón de recordar usuario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="username_hint">Nombre</string>
     <string name="repeat_password_hint">Repite la contraseña</string>
     <string name="error">Error</string>
+    <string name="logout">Cerrar sesión</string>
 </resources>
