--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="repeat_password_hint">Repite la contraseña</string>
     <string name="error">Error</string>
     <string name="logout">Cerrar sesión</string>
+    <string name="edit">Editar</string>
 </resources>
