--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="error">Error</string>
     <string name="logout">Cerrar sesión</string>
     <string name="edit">Editar</string>
+    <string name="play">Jugar</string>
 </resources>
