--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="logout">Cerrar sesión</string>
     <string name="edit">Editar</string>
     <string name="play">Jugar</string>
+    <string name="save">Guardar</string>
 </resources>
